feat: increment counter on bpf map to share with

--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -20,6 +20,8 @@ tokio = { workspace = true, features = [
     "rt-multi-thread",
     "net",
     "signal",
+    "time",
+    "sync",
 ] }
 clap = { workspace = true, features = ["derive"] }
 [build-dependencies]
