--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -14,15 +14,7 @@ aya-log = { workspace = true }
 env_logger = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
-tokio = { workspace = true, features = [
-    "macros",
-    "rt",
-    "rt-multi-thread",
-    "net",
-    "signal",
-    "time",
-    "sync",
-] }
+tokio = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 [build-dependencies]
 anyhow = { workspace = true }
