--- a/program/Cargo.toml
+++ b/program/Cargo.toml
@@ -16,6 +16,9 @@ libc = { workspace = true }
 log = { workspace = true }
 tokio = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
+opentelemetry = { workspace = true }
+opentelemetry_sdk = { workspace = true }
+opentelemetry-otlp = { workspace = true }
 [build-dependencies]
 anyhow = { workspace = true }
 aya-build = { workspace = true }
